--- a/src/skins/iResponsive/assets/index.template.html
+++ b/src/skins/iResponsive/assets/index.template.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1">
 
     <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self';-->
     <!--connect-src 'self' *.vee24.com wss://*.vee24.com https://api.pvaas.bt.com https://dpm.demdex.net publiccontent.kbc.be www.kbc.be uat.serversidegraphics.com;-->
@@ -15,7 +15,8 @@
 
 </head>
 <body>
-    <div id="aam-designer" class="aam-designer-init" data-handoverkey="7f13608b-ac66-4da0-8ce6-29a15fb5d770">
+    <!--<div id="aam-designer" class="aam-designer-init" data-handoverkey="7f13608b-ac66-4da0-8ce6-29a15fb5d770">-->
+    <div id="aam-designer" class="aam-designer-init" data-handoverkey="21b32de0-09de-4ec2-a505-1a00eb9d3ac4">
         <div class="test"></div>
     </div>
 </body>
