add touch events

--- a/src/skins/iResponsive/assets/index.template.html
+++ b/src/skins/iResponsive/assets/index.template.html
@@ -19,5 +19,8 @@
     <div id="aam-designer" class="aam-designer-init" data-handoverkey="21b32de0-09de-4ec2-a505-1a00eb9d3ac4">
         <div class="test"></div>
     </div>
+
+
+    <div id="log"></div>
 </body>
 </html>
