--- a/src/skins/iResponsive/assets/index.template.html
+++ b/src/skins/iResponsive/assets/index.template.html
@@ -13,6 +13,10 @@
     <!--img-src 'self' data: https://multimediafiles.kbcgroup.eu *.vee24.com https://channel.me https://kbcgroupnv.d3.sc.omtrdc.net uat.serversidegraphics.com;-->
     <!--script-src 'self' *.vee24.com https://channel.me https://dpm.demdex.net https://kbcgroup.demdex.net wcmassets.kbc.be uat.serversidegraphics.com;">-->
 
+    <!-- Load TensorFlow.js. This is required to use MobileNet. -->
+    <!--<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.11.7"> </script>-->
+    <!--&lt;!&ndash; Load the MobileNet model. &ndash;&gt;-->
+    <!--<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@0.1.1"> </script>-->
 </head>
 <body>
     <!--<div id="aam-designer" class="aam-designer-init" data-handoverkey="7f13608b-ac66-4da0-8ce6-29a15fb5d770">-->
